--- a/omd/WORKSPACE
+++ b/omd/WORKSPACE
@@ -65,3 +65,6 @@ stunnel(
     version_str="5.63",
     sha256="c74c4e15144a3ae34b8b890bb31c909207301490bd1e51bfaaa5ffeb0a994617",
 )
+
+load("//packages/Python:Python_http.bzl", "python")
+python()
