--- a/tsconfig.strict.json
+++ b/tsconfig.strict.json
@@ -31,7 +31,7 @@
         "./web/htdocs/js/modules/foldable_container.ts",
         "./web/htdocs/js/modules/transfer.ts",
         //"./web/htdocs/js/modules/visibility_detection.ts",
-        //"./web/htdocs/js/modules/sidebar.ts",
+        "./web/htdocs/js/modules/sidebar.ts",
         "./web/htdocs/js/modules/async_progress.ts",
         //"./web/htdocs/js/modules/page_menu.ts",
         //"./web/htdocs/js/modules/popup_menu.ts",
