--- a/tsconfig.strict.json
+++ b/tsconfig.strict.json
@@ -34,7 +34,7 @@
         "./web/htdocs/js/modules/visibility_detection.ts",
         "./web/htdocs/js/modules/sidebar.ts",
         "./web/htdocs/js/modules/async_progress.ts",
-        //"./web/htdocs/js/modules/page_menu.ts",
+        "./web/htdocs/js/modules/page_menu.ts",
         "./web/htdocs/js/modules/popup_menu.ts",
         "./web/htdocs/js/modules/availability.ts",
         "./web/htdocs/js/modules/backup.ts",
