add types to activation.ts
Change-Id: I4147af52eee98016dc5cea3f63b81712bfb622a0

--- a/tsconfig.strict.json
+++ b/tsconfig.strict.json
@@ -38,7 +38,7 @@
         "./web/htdocs/js/modules/popup_menu.ts",
         "./web/htdocs/js/modules/availability.ts",
         "./web/htdocs/js/modules/backup.ts",
-        //"./web/htdocs/js/modules/activation.ts",
+        "./web/htdocs/js/modules/activation.ts",
         "./web/htdocs/js/modules/graph_integration.ts",
         "./web/htdocs/js/modules/views.ts",
         "./web/htdocs/js/modules/hover.ts",
