--- a/agents/cfg_examples/filestats.cfg
+++ b/agents/cfg_examples/filestats.cfg
@@ -63,3 +63,26 @@ input_patterns: /var/log/*
 # files that match the below pattern are shown as a seperate service
 # named "Generic log files Syslog files"
 grouping_regex: /var/log/syslog*
+
+# view the below section if you are interested in using single file
+# output aggregation
+
+[Single file %s]
+# In order to create one service per file, the section name has
+# to contain %s.
+# The name of the service will be "Single file {file path}".
+input_patterns: /var/log/*
+output: single_file
+
+# View the below sections if you are interested in using single file
+# output aggregation with the file grouping.
+# It's not possible to have single files in both the parent and the subgroups!
+
+[Generic log files]
+input_patterns: /var/log/*
+output: single_file
+
+[Generic log files@Syslog single file %s]
+# In order to have grouped single files, the group name has to contain %s.
+# The name of the service will be "Generic log files Syslog single file {file path}".
+grouping_regex: /var/log/syslog*
