--- a/tsconfig.strict.json
+++ b/tsconfig.strict.json
@@ -56,7 +56,7 @@
         //"./web/htdocs/js/modules/figures/cmk_figures_plugins.ts",
         "./web/htdocs/js/modules/quicksearch.ts",
         "./web/htdocs/js/modules/webauthn.ts",
-        //"./web/htdocs/js/modules/search.ts"
+        "./web/htdocs/js/modules/search.ts"
     ],
     "exclude": [
         "./web/**/*",
