--- a/tsconfig.strict.json
+++ b/tsconfig.strict.json
@@ -22,7 +22,7 @@
         "./web/htdocs/js/modules/element_dragging.ts",
         "./web/htdocs/js/modules/password_meter.ts",
         //"./web/htdocs/js/modules/forms.ts",
-        //"./web/htdocs/js/modules/service_discovery.ts",
+        "./web/htdocs/js/modules/service_discovery.ts",
         "./web/htdocs/js/modules/utils.ts",
         "./web/htdocs/js/modules/selection.ts",
         "./web/htdocs/js/modules/number_format.ts",
