--- a/tsconfig.strict.json
+++ b/tsconfig.strict.json
@@ -16,6 +16,7 @@
     },
     "files": [
         // add files here
+        "./web/htdocs/js/modules/dashboard.ts",
         "./web/htdocs/js/modules/valuespecs.ts",
         //"./web/htdocs/js/modules/graphs.ts",
         "./web/htdocs/js/modules/wato.ts",
