Reland: Consolidate integration test execution
Execute integration tests from venv (like all other tests). We now test
the site from the outside and use the Site object to access the
site resources.

This commit will break most integration tests which will be changed
to work in the new mode in the follow up commits.

Following this change we can simplify a number of special cases in the
conftest and testlib.

Change-Id: I7beb6c03ff6c73fc0b4264f2147124f608abeea0

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -257,7 +257,7 @@ test-gui-e2e: prepare-playwright
 	$(PYTEST) -T gui_e2e --screenshot=only-on-failure --output="$$RESULT_PATH/" $(PYTEST_SYSTEM_TEST_ARGS) $(realpath gui_e2e/)  --numprocesses=1
 
 test-integration:
-	$(PIPENV) run scripts/run-integration-test.py $(realpath integration)
+	$(PYTEST) -T integration $(PYTEST_SYSTEM_TEST_ARGS) $(realpath integration)
 
 test-composition:
 	$(PYTEST) -T composition $(PYTEST_SYSTEM_TEST_ARGS) $(realpath composition)
