Update Pipfile.lock & py-import-cycles
- py-import-cycles now uses 'johnson' which finds three new cycles

Change-Id: I846cc10ca0c58a1700921e80455c2f79667bafbc

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -327,10 +327,10 @@ test-shellcheck:
 
 test-cycles:
 	$(CYCLES) \
-		--threshold 9 \
+		--threshold 12 \
 		--packages cmk omd/packages/omd/omdlib agent-receiver/agent_receiver \
 		--project-path $$(realpath -L ..) \
-		--strategy dfs \
+		--strategy johnson \
 		--verbose
 
 test-cycles-docker:
