--- a/Pipfile
+++ b/Pipfile
@@ -51,6 +51,7 @@ pyls-isort = "*"  # isort plugin for python-lsp-server
 pylsp-mypy = "*"  # mypy plugin for python-lsp-server
 mypy-protobuf = "*" # for mypy
 pipfile = "*" # for generating import names during int tests
+networkx = "*" # needed for py-import-cycles
 py-import-cycles = "*"  # used in tests/Makefile
 telnetlib3 = "*"  # used by Windows Agent tests
 schemathesis = "*"  # used for openapi tests
