add types to webauthn.ts
Change-Id: I66bbc4fe96a1cbab8a0120ad4d90f0f56453e328

--- a/tsconfig.strict.json
+++ b/tsconfig.strict.json
@@ -54,7 +54,7 @@
         //"./web/htdocs/js/modules/figures/cmk_figures.ts",
         //"./web/htdocs/js/modules/figures/cmk_figures_plugins.ts",
         "./web/htdocs/js/modules/quicksearch.ts",
-        //"./web/htdocs/js/modules/webauthn.ts",
+        "./web/htdocs/js/modules/webauthn.ts",
         //"./web/htdocs/js/modules/search.ts"
     ],
     "exclude": [
