add types to visibility_detection.ts
Change-Id: Iaff439ae4ed1a67557f9e1ec6e563428418d9298

--- a/tsconfig.strict.json
+++ b/tsconfig.strict.json
@@ -30,7 +30,7 @@
         "./web/htdocs/js/modules/sites.ts",
         "./web/htdocs/js/modules/foldable_container.ts",
         "./web/htdocs/js/modules/transfer.ts",
-        //"./web/htdocs/js/modules/visibility_detection.ts",
+        "./web/htdocs/js/modules/visibility_detection.ts",
         "./web/htdocs/js/modules/sidebar.ts",
         "./web/htdocs/js/modules/async_progress.ts",
         //"./web/htdocs/js/modules/page_menu.ts",
