Added pexpect to Pipfile
Change-Id: I0b1ae1dc89e39d11a15881ab17624aed79a67a03

--- a/Pipfile
+++ b/Pipfile
@@ -93,6 +93,7 @@ types-typing-extensions = "*"  # used for type checking
 types-urllib3 = "*"  # used for type checking
 botocore-stubs = "==1.29.96"  # used for type checking, keep version in sync with botocore
 boto3-stubs = "==1.26.96"  # used for type checking, keep version in sync with boto3
+pexpect = "*" # used for update testing
 
 [packages]
 setuptools-scm = "==4.1.2"  # needed by various setup.py
