--- a/buildscripts/scripts/stages.yml
+++ b/buildscripts/scripts/stages.yml
@@ -66,7 +66,7 @@ VARIABLES:
       SH: "echo '${CHANGED_FILES_REL}' | grep '^scripts/check-typescript-types.sh' - || true"
 
     - NAME: CHANGED_TYPESCRIPT_CONFIG
-      SH: "echo '${CHANGED_FILES_REL}' | grep '^tsconfig*.json' - || true"
+      SH: "echo '${CHANGED_FILES_REL}' | grep '^tsconfig.*.json' - || true"
 
     - NAME: CHANGED_WEBPACK_CONFIG
       SH: "echo '${CHANGED_FILES_REL}' | grep '^webpack.config.js' - || true"
