--- a/Pipfile
+++ b/Pipfile
@@ -56,7 +56,7 @@ py-import-cycles = "*"  # used in tests/Makefile
 telnetlib3 = "*"  # used by Windows Agent tests
 schemathesis = "*"  # used for openapi tests
 httpx = "*"  # used by agent receiver tests
-ruff = "==0.0.240"  # newer versions have problems with the match statement
+ruff = "*"
 types-beautifulsoup4 = "*"  # used for type checking
 types-cachetools = "*"  # used for type checking
 types-cffi = "*"  # used for type checking
@@ -91,8 +91,8 @@ types-simplejson = "*"  # used for type checking
 types-six = "*"  # used for type checking
 types-typing-extensions = "*"  # used for type checking
 types-urllib3 = "*"  # used for type checking
-botocore-stubs = "==1.29.96"  # used for type checking, keep version in sync with botocore
-boto3-stubs = "==1.26.96"  # used for type checking, keep version in sync with boto3
+botocore-stubs = "==1.29.105"  # used for type checking, keep version in sync with botocore
+boto3-stubs = "==1.26.105"  # used for type checking, keep version in sync with boto3
 pexpect = "*" # used for update testing
 
 [packages]
@@ -123,7 +123,7 @@ chardet = "==5.1.0"  # needed by requests
 urllib3 = "==1.26.15"  # needed by requests
 pyopenssl = "==19.1.0"  # needed by requests with extras = ["security"]
 pbr = "==5.11.1"  # needed by jira
-pyghmi = "==1.5.13"  # needed by base for IPMI
+pyghmi = "==1.5.60"  # needed by base for IPMI
 requests = {version = "==2.28.2",extras = ["security"]}  # needed by DCD, connexion
 pykerberos = "==1.2.4"  # needed by check_bi_aggr
 requests-kerberos = "==0.12.0"  # needed by check_bi_aggr, versions >=0.13.0 depend on pyspnego, which pulls in gssapi, which in turn fails on SLES because of https://github.com/pythongssapi/python-gssapi/issues/212
@@ -139,7 +139,7 @@ click = "==8.1.3"  # needed by flask
 werkzeug = "==2.2.3"  # direct dependency and needed by flask
 jsonschema = "==4.17.3"  # needed by openapi-spec-validator
 flask = "==2.2.3"  # direct dependency
-pytz = "==2022.7.1"  # direct dependency
+pytz = "==2023.3"  # direct dependency
 openapi-spec-validator = "==0.5.6"  # direct dependency
 psutil = "==5.9.4"  # needed for omdlib
 passlib = "==1.7.4"  # needed for omdlib
@@ -150,33 +150,33 @@ requests-toolbelt = "==0.10.1"  # needed by jira
 docutils = "==0.19"  # needed by boto3 (aws)
 jira = "==3.5.0"  # needed by jira
 adal = "==1.2.7"  # needed by agent_azure
-pillow = "==9.4.0"
+pillow = "==9.5.0"
 python-ldap = "==3.4.3"  # needed by GUI (User sync), python-active-directory
 dicttoxml = "==1.7.16"  # needed by GUI (API XML format)
-cython = "==0.29.33"  # needed by numpy
+cython = "==0.29.34"  # needed by numpy
 numpy = "==1.24.2"  # needed by GUI (metrics)
 reportlab = "==3.6.12"  # needed by GUI (reporting)
 pypdf3 = "==1.0.6"  # needed by GUI (reporting)
 roman = "==4.0"  # needed by GUI (reporting)
 cachetools = "==4.2.4"  # needed by kubernetes
-google-auth = "==2.3.3"  # needed by kubernetes
+google-auth = "==2.17.1"  # needed by kubernetes
 websocket-client = "==1.5.1"  # needed by kubernetes
 kubernetes = "==21.7.0"  # needed by kubernetes
 jmespath = "==1.0.1"  # needed by boto3 (aws)
-botocore = "==1.29.96"  # needed by boto3 (aws), keep version in sync with botocore-stubs
+botocore = "==1.29.105"  # needed by boto3 (aws), keep version in sync with botocore-stubs
 s3transfer = "==0.6.0"  # needed by boto3 (aws)
-boto3 = "==1.26.96"  # needed by boto3 (aws), keep version in sync with boto3-stubs
+boto3 = "==1.26.105"  # needed by boto3 (aws), keep version in sync with boto3-stubs
 python-snap7 = "==1.3"  # needed by Siemens PLC special agent
 pymssql = "==2.2.7"  # needed by check_sql active check
-pymysql = "==0.9.3"  # needed by check_sql active check
-psycopg2-binary = "==2.9.5"  # needed by check_sql active check
+pymysql = "==1.0.3"  # needed by check_sql active check
+psycopg2-binary = "==2.9.6"  # needed by check_sql active check
 apispec = "==5.2.2"  # direct dependency
 marshmallow = "==3.19.0"  # direct dependency
 marshmallow-oneofschema = "==3.0.1"  # direct dependency
 mypy-extensions = "==1.0.0" # direct dependency, NOTE: This should really be unpinned, because it must work with the unpinned mypy version! Otherwise e.g. the mypy LSP integration can break silently etc. But we have a silly test enforcing the pinning here... :-P * * *
 apispec-oneofschema = "==3.0.0"  # direct dependency
 typing-extensions = "==4.5.0"   # required by pydantic
-pydantic = "==1.10.6"
+pydantic = "==1.10.7"
 paho-mqtt = "==1.6.1"  # needed for MQTT special agent
 python-active-directory = "==2.0.1"
 rrdtool = "==0.1.16"  # Actually we ship the binding which comes with rrdtool itself...
@@ -186,30 +186,30 @@ repoze-profile = "==2.3"  # used for GUI/API profiling
 pyparsing = "==3.0.9"  # direct dependency
 ordered-set = "==4.1.0"  # needed by deepdiff
 deepdiff = "==6.3.0"  # used for recording setup audit log
-redis = "==4.5.1"  # needed by GUI (caching)
+redis = "==4.5.4"  # needed by GUI (caching)
 fido2 = "==0.9.3"  # used for GUI 2fa webauthn
 tenacity = "==8.2.2"  # needed by opsgenie-sdk
 opsgenie-sdk = "==2.1.5"  # needed by opsgenie_issues
 protobuf = "==3.20.1"  # For development, Runtime modules are shipped by omd/packages/protobuf
-semver = "==2.13.0"
+semver = "==3.0.0"
 uvicorn = "==0.20.0"  # used for running agent-receiver server, UPGRADES MIGHT BREAK agent-receiver/agent_receiver/worker.py
 gunicorn= "==20.1.0" # used for running agent-receiver server
 agent-receiver = {editable = true, path = "./agent-receiver"}
 pysmb = "==1.2.9.1"  # used by SMB share special agent
-google-cloud-monitoring = "==2.8.0"  # used by the gcp special agent
-google-cloud-asset = "==3.8.0"  # used by the gcp special agent
+google-cloud-monitoring = "==2.11.1"  # used by the gcp special agent
+google-cloud-asset = "==3.14.0"  # used by the gcp special agent
 exchangelib = "==4.9.0"  # used by active checks for mail
 lxml = "==4.9.2"  # used via beautifulsoup4 as a parser and in the agent_netapp special agent
 grpcio = "==1.51.3"
-google-api-python-client = "==2.53.0"  # use rest api to query big query for gcp cost monitoring
+google-api-python-client = "==2.83.0"  # use rest api to query big query for gcp cost monitoring
 setproctitle = "==1.3.2"  # used by mkbench/dcd/liveproxyd
-black = {version = "==23.1.0", extras = ["d"]}  # used in our CI, the LSP-integration and in the OpenAPI part, "d" for broken black packaging only, see https://github.com/psf/black/issues/690
+black = {version = "==23.3.0", extras = ["d"]}  # used in our CI, the LSP-integration and in the OpenAPI part, "d" for broken black packaging only, see https://github.com/psf/black/issues/690
 meraki = "==1.30.0"  # used by special agent Cisco Meraki
 feedparser = "==6.0.10"  # used by special agent Microsoft Azure Status
 pysaml2 = "==7.4.1"  # used by SSO via SAML2.0
 azure-storage-blob = "==12.15.0"  # used for backups to Azure Blob Storage
 azure-identity = "==1.12.0"  # used for backups to Azure Blob Storage
-markdown = "==3.4.1"  # used for werk parsing
+markdown = "==3.4.3"  # used for werk parsing
 
 [requires]
 # As pipenv {sync,lock} does currently not support env variable expansion in and out Pipfile.lock,
