Extend monitoring core interface, preparing unification of TableHosts.
This is basically the first half of a similar change by Sergey Kipnis
<sergey.kipnis@tribe29.com>.  The actual unification will come in a
separate change, this one is already big enough.

Change-Id: I617f3adf198a0f2fefce2af4589eed2ae3e737e8

--- a/livestatus/src/Makefile.am
+++ b/livestatus/src/Makefile.am
@@ -101,6 +101,7 @@ liblivestatusneb_a_SOURCES = \
         HostListState.cc \
         MacroExpander.cc \
         NagiosCore.cc \
+        NebHost.cc \
         RRDColumn.cc \
         ServiceListState.cc \
         Store.cc \
