--- a/omd/packages/stunnel/skel/etc/stunnel/server.conf
+++ b/omd/packages/stunnel/skel/etc/stunnel/server.conf
@@ -6,12 +6,10 @@ syslog = no
 # Set log level to warning
 debug = 4
 
-sslVersionMin = TLSv1.2
+sslVersion = TLSv1.2
 socket = l:TCP_NODELAY=1
 socket = r:TCP_NODELAY=1
 client = no
-
-ciphers = ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305
 
 [live-tls]
 accept = ###ROOT###/tmp/run/live-tls
