--- a/buildscripts/infrastructure/build-nodes/ubuntu-20.04/Dockerfile
+++ b/buildscripts/infrastructure/build-nodes/ubuntu-20.04/Dockerfile
@@ -159,6 +159,7 @@ RUN /opt/install-pipenv.sh
 RUN /opt/install-cmk-dependencies.sh
 RUN /opt/install-patchelf.sh
 RUN /opt/install-packer.sh
+RUN /opt/install-aws-cli.sh
 
 # Ensure all our build containers have the jenkins user (with same uid/gid). The non privileged
 # jobs will be executed as this user in the container
