--- a/buildscripts/scripts/stages.yml
+++ b/buildscripts/scripts/stages.yml
@@ -244,7 +244,7 @@ STAGES:
     -  NAME: 'JS Build'
        ONLY_WHEN_NOT_EMPTY: CHANGED_JS_FILES,CHANGED_TESTS_MAKEFILE,CHANGED_WEBPACK_CONFIG,CHANGED_PACKAGE_JSON
        DIR: 'tests'
-       COMMAND: 'make test-build-js &> ${RESULTS}/js-build.txt'
+       COMMAND: 'make test-build-js-docker &> ${RESULTS}/js-build.txt'
        TEXT_ON_SKIP: 'No relevant JS/TS files changed'
        RESULT_CHECK_FILE_PATTERN: "results/js-build.txt"
 
